fix bug connect database

--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@ DEBUGGER_SYSTEM_WRITE_INTO_CONSOLE=false
 
 JOB_ENABLE=false
 
-DATABASE_HOST=mongodb://localhost:27017
+DATABASE_HOST=mongodb://127.0.0.1:27017
 DATABASE_NAME=user_managenment
 DATABASE_USER=
 DATABASE_PASSWORD=
